[gd_scene load_steps=2 format=3 uid="uid://c8n5k3m9p7q2r"]

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1_hud_script"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LevelLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Level 1"

[node name="ScoreLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 70.0
offset_right = 400.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(1, 1, 0.6, 1)
theme_override_font_sizes/font_size = 28
text = "Score: 0"

[node name="AttemptsLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 120.0
offset_right = 400.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Attempts: 0"
